phpmyadmin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mysql
            topologyKey: kubernetes.io/hostname

---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
spec:
  type: LoadBalancer
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
